Fixed some of the graph issues in Hashtag tab, css issues when the search is too big on the Y axis

--- a/frontend/src/components/profile/assets/css/light-bootstrap-dashboard-react.css
+++ b/frontend/src/components/profile/assets/css/light-bootstrap-dashboard-react.css
@@ -1896,7 +1896,7 @@ body > .navbar-collapse[data-color="purple"]:after {
 .ct-label {
   fill: rgba(0, 0, 0, 0.4);
   color: rgba(0, 0, 0, 0.4);
-  font-size: 0.3rem !important;
+  /* font-size: 0.3rem !important; */
   line-height: 1; }
 
 .ct-chart-line .ct-label,
