--- a/frontend/src/scss.css
+++ b/frontend/src/scss.css
@@ -1901,7 +1901,7 @@ body > .navbar-collapse[data-color="purple"]:after {
 .ct-label {
   fill: rgba(0, 0, 0, 0.4);
   color: rgba(0, 0, 0, 0.4);
-  font-size: 0.3rem;
+  /* font-size: 0.3rem; */
   line-height: 1; }
 
 .ct-chart-line .ct-label,
